--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
@@ -13,6 +14,7 @@
         <li><a href="./recipes/homemade_lasagna.html">Home Made Lasagna</a></li>
         <li><a href="./recipes/worlds_best_lasagna.html"> Worlds Best Lasagna</a></li>
     </ul>
-    
+    <button>Click_Me</button>
+
 </body>
 </html>
